# tongue-twister

./: .gitignore  README.md  pyproject.toml  run.ps1
envs/: environment.yaml  environment.yml
src/tongue-twister/: cli.py
src/tongue_twister/: __init__.py  cli.py  main.py  tongue_twister_exceptions.py
src/tongue_twister/core/: audio_manager.py  gui.py  tongue_twister_manager.py
src/tongue_twister/data/: tongue_twisters.txt
